--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body ng-app="app">
 
   <div ng-controller="MainCtrl">
-    <h1>protip: focus a field then use up/down arrow</h1>
+    <h1>focus a field then use up/down arrow</h1>
 
     <fieldset>
       <legend>Group</legend>
